--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Hurricane&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./output.css">
-    <title>Vite App</title>
+    <title>Tiara & Jalu</title>
+    <link rel="icon" href="./assets/elements/favicon.png">
 </head>
 
 <body id="body" class="overflow-hidden">
@@ -110,7 +111,7 @@
     <!-- Main Content -->
     <section id="next-page" class="flex flex-col items-center w-full h-screen overflow-x-hidden">
         <!-- Large Background -->
-        <div id="large-background" class="hidden fixed -z-1 animate-fade animate-duration-8000 w-screen h-screen object-cover">
+        <div id="large-background" class="hidden lg:block fixed -z-1 animate-fade animate-duration-8000 w-screen h-screen object-cover">
             <div class="absolute inset-0 w-full h-full overflow-hidden">
                 <img src="./assets/elements/bg-overlay-min.png" alt=""
                     class="absolute w-full h-full top-1/2 -translate-y-1/2 object-center scale-125 object-cover animate-jump animate-duration-10000">
