--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </div>
             </div>
 
-            <section class="w-full lg:max-w-[425px] min-h-screen flex flex-col justify-center items-center overflow-hidden bg-[var(--secondary-color)] py-5 md:py-30 lg:py-5 gap-5">
+            <section class="w-full lg:max-w-[425px] min-h-screen flex flex-col justify-center items-center overflow-hidden bg-[var(--secondary-color)] py-5 md:py-30 lg:py-5 gap-10">
                 <!-- Count Down -->
                 <section class="relative countdown-wrap w-full flex flex-col gap-20 md:gap-30 lg:gap-20 justify-center items-center py-4">
                     <span class="title opacity-0 font-great font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Hari Yang Ditunggu</span>
@@ -526,6 +526,111 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Kirim Hadiah -->
+                <section class="relative countdown-wrap w-full flex flex-col gap-5 justify-center items-center p-4">
+                    <span class="title opacity-0 font-great font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Kirim hadiah</span>
+                    <p class="description opacity-0 font-crimson text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                        Doa restu anda merupakan karunia yang sangat berarti bagi kami, namun jika Anda ingin memberikan hadiah kami sediakan fitur berikut:
+                    </p>
+                    <div class="w-full flex flex-col gap-5 bg-[var(--tertiary-color)] p-2 rounded-lg">
+                        <div class="flex justify-between">
+                            <span class="font-crimson text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">A.n. Nama</span>
+                            <img src="./assets/elements/Logo-BSI.png" alt="" class="w-[30%]">
+                        </div>
+                        <span id="rekening-number" class="font-crimson font-bold text-xl md:text-4xl lg:text-xl text-[var(--quaternary-color)]">1234567890</span>
+                        <button class="button opacity-0 w-[50%] md:w-[40%] lg:w-[70%] flex items-center justify-center gap-2 font-crimson bg-white text-[var(--primary-color)] text-sm text-center border-[var(--primary-color)] rounded-sm cursor-pointer py-2 px-4
+                            md:text-2xl lg:text-sm
+                            active:scale-95 focus:bg-[var(--primary-color)]"
+                        >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="black" viewBox="0 0 448 512">
+                                <path d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"/>
+                            </svg> Copy
+                        </button>
+                    </div>
+                    <div class="w-full flex flex-col justify-center items-center gap-5 bg-[var(--tertiary-color)] rounded-lg p-5">
+                        <img src="./assets/elements/Kado.png" alt="" class="w-[30%]">
+                        <div class="flex flex-col gap-1">
+                            <span class="font-crimson text-center text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">Kirimkan kado ke alamat:</span>
+                            <span id="alamat-rumah" class="font-crimson font-bold text-center text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">Jl. Melati No. 24, RT 03/RW 07, Kelurahan Sukamaju, Kecamatan Cibinong, Kabupaten Bogor, Jawa Barat 16913</span>
+                        </div>
+                        <button class="button opacity-0 w-[50%] md:w-[40%] lg:w-[70%] flex items-center justify-center gap-2 font-crimson bg-white text-[var(--primary-color)] text-sm text-center border-[var(--primary-color)] rounded-sm cursor-pointer py-2 px-4
+                            md:text-2xl lg:text-sm
+                            active:scale-95 focus:bg-[var(--primary-color)]"
+                            >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="black" viewBox="0 0 448 512">
+                                <path d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"/>
+                            </svg> Copy
+                        </button>
+                        <span class="font-crimson text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">A.n. Nama</span>
+                    </div>
+                </section>
+
+                <section class="relative countdown-wrap w-full flex flex-col gap-5 justify-center items-center p-4">
+                    <span class="title opacity-0 font-great font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Galery</span>
+                    <!-- <div class="bg-cover bg-center h-auto p-8 rounded-sm" style="
+                        background-image: linear-gradient(var(--tertiary-color-transparant2), var(--tertiary-color-transparant2)), url('./assets/mempelai/m-4.jpg');
+                    ">
+                        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                            <img src="./assets/mempelai/m-1.jpeg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-2.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-3.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-4.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-5.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-6.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-7.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                            <img src="./assets/mempelai/m-8.jpg" alt="" class="w-full h-40 object-cover rounded-lg shadow-md">
+                        </div>
+                    </div> -->
+                    <div class="p-8 bg-black bg-opacity-10 bg-cover bg-center rounded" style="background-image: url('/api/placeholder/800/400')">
+                        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-1.jpeg" alt="Wedding Photo 1" data-index="0" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-2.jpg" alt="Wedding Photo 2" data-index="1" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-3.jpg" alt="Wedding Photo 3" data-index="2" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-4.jpg" alt="Wedding Photo 4" data-index="3" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-5.jpg" alt="Wedding Photo 5" data-index="4" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-6.jpg" alt="Wedding Photo 6" data-index="5" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-7.jpg" alt="Wedding Photo 7" data-index="6" class="w-full h-40 object-cover block">
+                            </div>
+                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
+                                <img src="./assets/mempelai/m-8.jpg" alt="Wedding Photo 8" data-index="7" class="w-full h-40 object-cover block">
+                            </div>
+                            </div>
+                        </div>
+                </section>
+                <div id="trigger-for-background" class="relative w-full">
+                    <img src="./assets/elements/orn-25-min.png" alt=""
+                        class="orn-footer absolute opacity-0 w-[40%] -top-2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                    <div>
+                        <img src="./assets/elements/orn-3-min.png" alt=""
+                            class="orn-3-quote-left absolute opacity-0 transform scale-x-[-1] w-[20%] -left-2 -top-25 md:-top-50 lg:-top-25">
+                        <img src="./assets/elements/orn-14-min.png" alt=""
+                            class="orn-footer absolute opacity-0 w-[20%] left-12 -top-10 md:w-[15%] md:left-35 lg:w-[20%] lg:left-12">
+                        <img src="./assets/elements/orn-8-min.png" alt=""
+                            class="orn-footer absolute opacity-0 transform scale-x-[-1] w-[25%] -left-2 -top-8 md:-top-15 lg:-top-8">
+                    </div>
+                    <div>
+                        <img src="./assets/elements/orn-3-min.png" alt=""
+                            class="orn-3-quote-right absolute opacity-0 w-[20%] -right-2 -top-25 md:-top-50 lg:-top-25">
+                        <img src="./assets/elements/orn-14-min.png" alt=""
+                            class="orn-footer absolute transform opacity-0 scale-x-[-1] w-[20%] right-12 -top-10 md:w-[15%] md:right-35 lg:w-[20%] lg:right-12">
+                        <img src="./assets/elements/orn-8-min.png" alt=""
+                            class="orn-footer absolute opacity-0 w-[25%] -right-2 -top-8 md:-top-15 lg:-top-8">
+                    </div>
+                </div>
             </section>
         </section>
 
@@ -587,6 +692,17 @@
             </svg>
         </div>
     </button>
+
+    <!-- Lightbox Modal -->
+    <div id="photoLightbox" class="fixed inset-0 z-50 hidden bg-black bg-opacity-90 flex flex-col justify-center items-center" style="display: none;">
+        <span id="closeLightbox" class="absolute top-4 right-6 text-white text-4xl cursor-pointer z-50">&times;</span>
+        <div class="relative max-w-[90%] max-h-[80%] text-center">
+        <img src="" alt="Lightbox Image" id="lightboxImage" class="max-w-full max-h-[80vh] object-contain rounded">
+        <div id="slideCounter" class="absolute -bottom-8 left-0 right-0 text-white text-base">1 / 8</div>
+        </div>
+        <div id="prevSlide" class="absolute top-1/2 left-4 -translate-y-1/2 bg-white bg-opacity-20 text-white text-2xl p-3 rounded-full cursor-pointer z-50 transition duration-300 hover:bg-opacity-40">&#10094;</div>
+        <div id="nextSlide" class="absolute top-1/2 right-4 -translate-y-1/2 bg-white bg-opacity-20 text-white text-2xl p-3 rounded-full cursor-pointer z-50 transition duration-300 hover:bg-opacity-40">&#10095;</div>
+    </div>
 
     <script src="./index.js"></script>
 </body>
