--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         <!-- Content -->
         <section class="items-center pb-0">
             <!-- Opening -->
-            <section class="relative w-full min-h-screen lg:max-w-[425px] overflow-hidden">
-                <canvas id="canvas" class="absolute w-full h-full"></canvas>
+            <section class="w-full min-h-screen lg:max-w-[425px] overflow-hidden">
+                <!-- <canvas id="canvas" class="absolute w-full h-full"></canvas> -->
                 <img src="./assets/mempelai/m-opening.jpg" alt="" 
                     class="w-full h-auto min-h-screen object-cover lg:h-screen">
             </section>
