--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                     <div class="w-full flex flex-col gap-5 bg-[var(--tertiary-color)] p-2 rounded-lg">
                         <div class="flex justify-between">
                             <span class="font-roboto text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">A.n. Ulul Albab Tiara</span>
-                            <img src="./assets/elements/Logo-BSI.png" alt="" class="w-[30%]">
+                            <img src="./assets/elements/logo-bca.webp" alt="" class="w-[30%]">
                         </div>
                         <span id="rekening-number" class="font-roboto font-bold text-xl md:text-4xl lg:text-xl text-[var(--quaternary-color)]">8360220401</span>
                         <button class="button copy-rekening-number opacity-0 w-[50%] md:w-[40%] lg:w-[70%] flex items-center justify-center gap-2 font-roboto bg-white text-[var(--primary-color)] text-sm text-center border-[var(--primary-color)] rounded-sm cursor-pointer py-2 px-4
