--- a/index.html
+++ b/index.html
@@ -10,17 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- font latin -->
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Carattere&display=swap" rel="stylesheet">
     <!-- font base -->
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Hurricane&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./output.css">
     <title>Tiara & Jalu</title>
@@ -209,7 +201,7 @@
                     <div class="quote-content w-full flex flex-col justify-center items-center">
                         <div class="quote-body w-full flex flex-col justify-center items-center">
                             <div class="relative w-full flex flex-col items-center gap-3">
-                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">1. Endles Love</span>
+                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">1. Endless Love</span>
                                 <div class="quote-containier w-[70%] h-75 relative z-1">
                                     <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
                                         <p class="description font-roboto opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
@@ -223,111 +215,6 @@
                                 <div class="w-ful flex justify-center">
                                     <img src="./assets/elements/orn-18-min.png" alt=""
                                         class="orn-18-quote absolute opacity-0 w-[45%] -top-38 md:-top-70 lg:-top-40">
-                                </div>
-                                <div class="orn-quote relative w-full z-0">
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
-                                    </div>
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                
-                <!-- Quote -->
-                <section class="quote-wrap w-full flex flex-col justify-center items-center">
-                    <div class="quote-content w-full flex flex-col justify-center items-center">
-                        <div class="quote-body w-full flex flex-col justify-center items-center">
-                            <div class="relative w-full flex flex-col items-center gap-3">
-                                <span class="title font-bold opacity-0 font-montecarlo text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">2. Endles Love</span>
-                                <div class="quote-containier w-[70%] h-75 relative z-1">
-                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
-                                        <p class="description font-comfortaa opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
-                                        </p>
-                                        <p class="detail font-comfortaa opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="orn-quote relative w-full z-0">
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
-                                    </div>
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Quote -->
-                <section class="quote-wrap w-full flex flex-col justify-center items-center">
-                    <div class="quote-content w-full flex flex-col justify-center items-center">
-                        <div class="quote-body w-full flex flex-col justify-center items-center">
-                            <div class="relative w-full flex flex-col items-center gap-3">
-                                <span class="title font-bold opacity-0 font-pinyon text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">3. Endles Love</span>
-                                <div class="quote-containier w-[70%] h-75 relative z-1">
-                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
-                                        <p class="description font-work-sans opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
-                                        </p>
-                                        <p class="detail font-work-sans opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="orn-quote relative w-full z-0">
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
-                                    </div>
-                                    <div>
-                                        <img src="./assets/elements/orn-22-min.png" alt=""
-                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
-                                        <img src="./assets/elements/orn-3-min.png" alt=""
-                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Quote -->
-                <section class="quote-wrap w-full flex flex-col justify-center items-center">
-                    <div class="quote-content w-full flex flex-col justify-center items-center">
-                        <div class="quote-body w-full flex flex-col justify-center items-center">
-                            <div class="relative w-full flex flex-col items-center gap-3">
-                                <span class="title font-bold opacity-0 font-parisienne text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">4. Endles Love</span>
-                                <div class="quote-containier w-[70%] h-75 relative z-1">
-                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
-                                        <p class="description font-quicksand opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
-                                        </p>
-                                        <p class="detail font-quicksand opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
-                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
-                                        </p>
-                                    </div>
                                 </div>
                                 <div class="orn-quote relative w-full z-0">
                                     <div>
@@ -691,7 +578,7 @@
                         Kehadiran Anda di pernikahan kami lebih penting daripada hadiah. Akan tetapi, meskipun kehadiran Anda cukup berarti, kami menghargai segala bentuk doa dan hadiah dari Anda.
                     </p>
                     <!-- ATM 1 -->
-                    <div class="w-full flex flex-col gap-2 bg-[linear-gradient(to_bottom,_#e9ddbb,_#aa9448)] p-5 rounded-lg">
+                    <!-- <div class="w-full flex flex-col gap-2 bg-[linear-gradient(to_bottom,_#e9ddbb,_#aa9448)] p-5 rounded-lg">
                         <div class="flex justify-end">
                             <img src="./assets/elements/Logo_BCA_Putih.png" alt="background-atm" class="w-[35%]">
                         </div>
@@ -706,7 +593,7 @@
                                 <path d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"/>
                             </svg> Copy
                         </button>
-                    </div>
+                    </div> -->
                     <!-- ATM 2 -->
                     <div class="w-full flex flex-col gap-2 bg-[url('./assets/elements/background-atm-invitren.jpg')] bg-cover bg-center p-5 rounded-lg">
                         <div class="flex justify-end">
