--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         </button>
                     </div> -->
                     <!-- ATM 2 -->
-                    <div class="w-full flex flex-col gap-2 bg-[url('./assets/elements/background-atm-invitren.jpg')] bg-cover bg-center p-5 rounded-lg">
+                    <div class="w-full flex flex-col gap-2 bg-cover bg-center p-5 rounded-lg" style="background-image: url('./assets/elements/background-atm-invitren.jpg');">
                         <div class="flex justify-end">
                             <img src="./assets/elements/Logo_BCA_Biru.png" alt="background-atm" class="w-[35%]">
                         </div>
