--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     </div>
                     <!-- hadiah 1 -->
                     <div class="w-full flex flex-col justify-center items-center gap-5 bg-[var(--tertiary-color)] rounded-lg p-5">
-                        <img src="./assets/elements/Kado-1.png" alt="" class="w-[30%]">
+                        <img src="./assets/elements/kado-1.png" alt="" class="w-[30%]">
                         <div class="flex flex-col gap-1">
                             <span class="font-roboto text-center text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">Kirimkan kado ke alamat:</span>
                             <span id="alamat-rumah" class="font-roboto font-bold text-center text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">Jl Candi Penataran IA No. 36 RT 07/RW 03, Kalipancur, Ngaliyan, Semarang</span>
