--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <span class="detail opacity-0 font-roboto text-sm text-center text-[var(--quaternary-color)]">Bapak Gintoro, S.Pd., & Ibu Eny Rahayu, S.Pd.</span>
                             </div>
                             <a
-                                href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
+                                href="https://www.instagram.com/tiaraaua?igsh=MWI2ZWM3eW1kdXc0cg==" target="_blank" rel="noopener noreferrer"
                                 class="button opacity-0 w-[50%] mt-2 flex items-center justify-center gap-2 font-roboto bg-[var(--primary-color)] text-white text-sm border-black border-1 rounded-3xl cursor-pointer py-2 px-4
                                 md:text-4xl lg:text-xl
                                 active:scale-95 focus:bg-[var(--primary-color)]"
@@ -345,7 +345,7 @@
                                 <span class="detail opacity-0 font-roboto text-sm text-center text-[var(--quaternary-color)]">Bapak Bambang Nugroho, S.T., & Ibu Dwi Gyuningtyas, S.E.</span>
                             </div>
                             <a
-                                href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
+                                href="https://www.instagram.com/jalungrh?igsh=MWN0OHgzZ3M2aW4zbQ==" target="_blank" rel="noopener noreferrer"
                                 class="button opacity-0 w-[50%] mt-2 flex items-center justify-center gap-2 font-roboto bg-[var(--primary-color)] text-white text-sm border-black border-1 rounded-3xl cursor-pointer py-2 px-4
                                 md:text-4xl lg:text-xl
                                 active:scale-95 focus:bg-[var(--primary-color)]"
@@ -564,7 +564,16 @@
                     <!-- Ucapan -->
                     <div class="description w-full max-h-[340px] h-auto flex flex-col border-r-2 border-[var(--primary-color)]">
                         <div class="ucapan max-h-[340px] overflow-y-scroll scrollbar-hide flex flex-col w-full gap-5">
-                            
+                            <div class="flex flex-col gap-2 bg-[var(--tertiary-color)] p-2 rounded-lg">
+                                <span class="font-crimson text-sm md:text-xl lg:text-sm text-[var(--primary-color)]">Andi</span>
+                                <span class="font-crimson text-xs md:text-sm lg:text-xs text-[var(--quaternary-color)]">3 Mei 2025</span>
+                                <span class="font-crimson text-sm md:text-xl lg:text-sm text-[var(--quaternary-color)]">Selamat ulang tahun!</span>
+                            </div>
+                            <div class="flex flex-col gap-2 bg-[var(--tertiary-color)] p-2 rounded-lg">
+                                <span class="font-crimson text-sm md:text-xl lg:text-sm text-[var(--primary-color)]">Andi</span>
+                                <span class="font-crimson text-xs md:text-sm lg:text-xs text-[var(--quaternary-color)]">3 Mei 2025</span>
+                                <span class="font-crimson text-sm md:text-xl lg:text-sm text-[var(--quaternary-color)]">askdfaskdfhiaufasjdfhaiuhfaksj vbaskhfiosduhfioasu hdfiasuhfiuasdhf iasudhfajksdfnkajshdfias hdfiaushfjsdhfkahjsdfiasbnfajsbfiauehfajshdfkashdfkash fiasuhfd</span>
+                            </div>
                         </div>
                     </div>
                 </section>
