--- a/index.html
+++ b/index.html
@@ -574,24 +574,7 @@
                     <p class="description opacity-0 font-roboto text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
                         Kehadiran Anda di pernikahan kami lebih penting daripada hadiah. Akan tetapi, meskipun kehadiran Anda cukup berarti, kami menghargai segala bentuk doa dan hadiah dari Anda.
                     </p>
-                    <!-- ATM 1 -->
-                    <!-- <div class="w-full flex flex-col gap-2 bg-[linear-gradient(to_bottom,_#e9ddbb,_#aa9448)] p-5 rounded-lg">
-                        <div class="flex justify-end">
-                            <img src="./assets/elements/Logo_BCA_Putih.png" alt="background-atm" class="w-[35%]">
-                        </div>
-                        <img src="./assets/elements/chip.png" alt="chip" class="w-[20%]">
-                        <span id="rekening-number" class="font-roboto font-bold text-xl md:text-4xl lg:text-xl text-[var(--quaternary-color)]">8360220401</span>
-                        <span class="font-roboto text-sm md:text-2xl lg:text-sm text-[var(--quaternary-color)]">Ulul Albab Tiara</span>
-                        <button class="button copy-rekening-number opacity-0 w-[50%] md:w-[40%] lg:w-[70%] flex items-center justify-center gap-2 font-roboto bg-white text-[var(--quaternary-color)] text-sm text-center border-[var(--primary-color)] rounded-sm cursor-pointer py-2 px-4
-                            md:text-2xl lg:text-sm
-                            active:scale-95"
-                        >
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#57411c" viewBox="0 0 448 512">
-                                <path d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"/>
-                            </svg> Copy
-                        </button>
-                    </div> -->
-                    <!-- ATM 1 -->
+                    <!-- ATM -->
                     <div class="w-full flex flex-col gap-2 bg-cover bg-center p-5 rounded-lg" style="background-image: url('./assets/elements/Background-atm-invitren.jpg');">
                         <div class="flex justify-end">
                             <img src="./assets/elements/Logo_BCA_Biru.png" alt="background-atm" class="w-[35%]">
