--- a/download.html
+++ b/download.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download RSVP Tiara & Jalu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./output.css">
     <link rel="icon" href="./assets/elements/favicon.png">
+    <title>Download RSVP Tiara & Jalu</title>
     <!-- Include SheetJS library for Excel file generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 
-<body class="font-crimson flex flex-col items-center gap-5 bg-[var(--secondary-color)]">
+<body class="font-roboto flex flex-col items-center gap-5 bg-[var(--secondary-color)]">
     <div class="w-full flex flex-col justify-center items-center gap-10 p-10">
         <h1 class="text-6xl">Daftar Kehadiran</h1>
         <div class="relative w-full overflow-x-auto shadow-md sm:rounded-lg">
