--- a/index.html
+++ b/index.html
@@ -648,25 +648,43 @@
                                                     <p class="text-sm"><br>Click this book</p>
                                                 </div>
                                                 <div class="back">
-                                                    <p class="text-xs">Beberapa rencana datang memang tidak terduga. Begitu pula dengan pertemuan pada 5 Mei 2024 itu. Sepasang mata memandang mengenai kikuk masing-masing pihak. Pertanyaan-pertanyaan seperti "Apa lagu favoritmu?", "Apa hobimu akhir-akhir ini?" menjadi topik obrolan yang disemogakan keluar oleh Jalu.</p>
+                                                    <p class="text-xs">Beberapa rencana datang memang tidak terduga. Begitu pula dengan pertemuan pada 5 Mei 2024 itu. Sepasang mata memandang mengenai kikuk masing-masing pihak. Pertanyaan-pertanyaan seperti "Apa lagu favoritmu?",</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="page">
+                                                <div class="flex flex-col justify-between items-center front cover">
+                                                    <p>"Apa hobimu akhir-akhir ini?" menjadi topik obrolan yang disemogakan keluar oleh Jalu.</p>
+                                                </div>
+                                                <div class="back">
+                                                    <p class="text-xs">"MCR-Cancer" jawab Tiara. Sepanjang jalan menukik diiringi dengan lirik yang seakan-akan tidak mau untuk memulai sebuah hubungan. Akan tetapi, tangan Tuhan memang maha kasih. Beberapa kesan yang tidak</p>
                                                 </div>
                                             </div>
                                         
                                             <div class="page">
                                                 <div class="front">
-                                                    <p class="text-xs">"MCR-Cancer" jawab Tiara. Sepanjang jalan menukik diiringi dengan lirik yang seakan-akan tidak mau untuk memulai sebuah hubungan. Akan tetapi, tangan Tuhan memang maha kasih. Beberapa kesan yang tidak menyenangkan ternyata menghadirkan sebuah cerita yang melegakan, "kami berupaya untuk berjodoh."</p>
+                                                    <p class="text-xs">menyenangkan ternyata menghadirkan sebuah cerita yang melegakan, "kami berupaya untuk berjodoh."</p>
                                                 </div>
                                                 <div class="back">
-                                                    <p class="text-xs">Terbilang tidak mudah untuk memulai suatu perhelatan sekali seumur hidup, begitu pula dengan kami. Beberapa perdebatan meja bundar telah kami lalui hingga tiba pada suatu negosiasi dan kesepakatan mengenai "bahagia dengan wujud apa" yang kami usahakan.</p>
+                                                    <p class="text-xs">Terbilang tidak mudah untuk memulai suatu perhelatan sekali seumur hidup, begitu pula dengan kami. Beberapa perdebatan meja bundar telah kami lalui hingga tiba pada suatu negosiasi dan kesepakatan mengenai "bahagia</p>
                                                 </div>
                                             </div>
 
                                             <div class="page">
                                                 <div class="front">
-                                                    <p class="text-xs">Cerita kami memang tidak terlalu memukau, akan tetapi seindah-indahnya cerita tetap harus kita maknai. Melalui beberapa kisah yang kami sembunyikan melalui sujud pada sela-sela hari, semoga kalian yang terkasihi turut merasakan kebahagiaan melalui hari bahagia kami. Semoga kalian semua turut merasakan, "memiliki tempat untuk pulang adalah kelegaan yang luar biasa".</p>
+                                                    <p class="text-xs">dengan wujud apa" yang kami usahakan.</p>
                                                 </div>
-                                                <div class="back cover">
-                                                    <p class="text-xs"></p>
+                                                <div class="back">
+                                                    <p class="text-xs">Cerita kami memang tidak terlalu memukau, akan tetapi seindah-indahnya cerita tetap harus kita maknai. Melalui beberapa kisah yang kami sembunyikan melalui sujud pada sela-sela hari, semoga kalian yang terkasihi turut</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="page">
+                                                <div class="front">
+                                                    <p class="text-xs">merasakan kebahagiaan melalui hari bahagia kami. Semoga kalian semua turut merasakan, "memiliki tempat untuk pulang adalah kelegaan yang luar biasa".</p>
+                                                </div>
+                                                <div class="back cover back-cover flex justify-center items-center">
+                                                    <h2 class="text-xl">Thanks</h2>
                                                 </div>
                                             </div>
                                         </div>
