--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
     <head>
+        <meta property="og:title" content="Serat Ulem | Tiara & Jalu" />
+        <meta property="og:description" content="Undangan pernikahan Tiara & Jalu." />
+        <meta property="og:image" content="https://invitation-web-three.vercel.app/assets/mempelai/m-3.jpeg" />
+        <meta property="og:url" content="https://invitation-web-three.vercel.app/" />
+        <meta property="og:type" content="website" />
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
