--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
     <head>
+        <meta property="og:image" content="https://invitation-web-three.vercel.app/assets/mempelai/m-3.jpeg" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
         <meta property="og:title" content="Serat Ulem | Tiara & Jalu" />
         <meta property="og:description" content="Undangan pernikahan Tiara & Jalu." />
-        <meta property="og:image" content="https://invitation-web-three.vercel.app/assets/mempelai/m-3.jpeg" />
         <meta property="og:url" content="https://invitation-web-three.vercel.app/" />
         <meta property="og:type" content="website" />
         <meta charset="UTF-8" />
