--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <meta property="og:image" content="https://invitation-web-three.vercel.app/assets/mempelai/m-3.jpeg" />
+        <meta property="og:image" content="https://invitation-web-three.vercel.app/assets/mempelai/thumbnail.jpeg" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
         <meta property="og:title" content="Serat Ulem | Tiara & Jalu" />
